2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Partial fix of distcheck.
	* Makefile.am (EXTRA_DIST): Adjust properly: distribute required
	stuff from build-aux and remove (deprecated) Windows stuff.
	* configure.ac (AM_INIT_AUTOMAKE): Don't generate .zip distribution
	as we don't need it at this stage of development, it's a waste of time.
	* src/ast/Makefile.am (EXTRA_DIST): Distribute missing witness files.
	* src/object/Makefile.am (libobject_la_SOURCES): Properly list all
	sources.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove the networking from the kernel.
	* src/Makefile.am: Adjust.
	* src/network/bsdnet/bsdnet.mk: Remove.
	* src/network/bsdnet/connection.cc: Remove.
	* src/network/bsdnet/connection.hh: Remove.
	* src/network/bsdnet/network.cc: Remove.
	* src/network/bsdnet/network.hh: Remove.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use a real exception hierarchy.
	* src/object/urbi-exception.hh (UrbiException): Remove the static
	methods lookupFailed, redefinition, primitiveError,
	wrongArgumentType and wrongArgumentCount.
	(LookupError, RedefinitionError, PrimitiveError, WrongArgumentType)
	(WrongArgumentCount): New exception classes.
	Adjust various Doxygen comments.
	* src/object/urbi-exception.cc (location_get, location_set): Move...
	* src/object/urbi-exception.hxx: ... here.
	Implement various inline constructors.
	* src/object/fwd.hh: Add new forward declarations.
	* src/object/object.cc,
	* src/object/primitives.hh,
	* src/object/float-class.cc: Adjust.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove old object-related tests.
	* src/object/Makefile.am: Adjust.
	* src/object/object-test-lookup.cc: Remove.
	* src/object/object-test-parent.cc: Remove.
	* src/object/object-test-primitives.cc: Remove.
	* src/object/object-test-slot.cc: Remove.
	* src/object/object-test.cc: Remove.
	* src/object/object-test.hh: Remove.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Disable hard errors.